# simulation

./: .gitignore  .yml  README.md  check_structure.py  pyproject.toml  requirements.txt  test_data.py  test_debug.py  test_plot.py
.streamlit/: config.toml
app/: streamlit_app.py
riskboot/: __init__.py  bootstrap.py  config.py  data.py  metrics.py  portfolio.py  simulate.py  trend.py
riskboot/data/: app_data_Oct_25.csv  equity_bond_data.csv  money_market.csv  trend_port_weights.csv
